examples/bad/03-01-variable-initialization.see
void main() {
    int c;
    int x, c = 5;

    return;
}